[gd_scene load_steps=3 format=3 uid="uid://b5srmidndewph"]

[ext_resource type="Script" path="res://scripts/simplified_raffle.gd" id="1_iekca"]
[ext_resource type="PackedScene" uid="uid://cf3vc1eeykw5a" path="res://scenes/ui/animations/raffle_animation.tscn" id="2_wfyok"]

[node name="SimplifiedRaffle" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_iekca")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.227451, 0.227451, 0.313726, 1)

[node name="MainPanel" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="MainPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "GameJam 抽奖系统"
horizontal_alignment = 1

[node name="ControlPanel" type="HBoxContainer" parent="MainPanel"]
layout_mode = 2
alignment = 1

[node name="DevlogFilter" type="CheckBox" parent="MainPanel/ControlPanel"]
layout_mode = 2
button_pressed = true
text = "只显示有开发日志的作品"

[node name="HSeparator" type="HSeparator" parent="MainPanel/ControlPanel"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="DrawButton" type="Button" parent="MainPanel/ControlPanel"]
layout_mode = 2
text = "开始抽奖"

[node name="HSeparator2" type="HSeparator" parent="MainPanel/ControlPanel"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="ResetButton" type="Button" parent="MainPanel/ControlPanel"]
layout_mode = 2
text = "重置抽奖"

[node name="HSeparator3" type="HSeparator" parent="MainPanel/ControlPanel"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="ExportButton" type="Button" parent="MainPanel/ControlPanel"]
layout_mode = 2
text = "导出结果"

[node name="ContentContainer" type="HSplitContainer" parent="MainPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="EntriesPanel" type="Panel" parent="MainPanel/ContentContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.65

[node name="VBoxContainer" type="VBoxContainer" parent="MainPanel/ContentContainer/EntriesPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="MainPanel/ContentContainer/EntriesPanel/VBoxContainer"]
layout_mode = 2
text = "参赛作品列表"
horizontal_alignment = 1

[node name="EntriesContainer" type="ScrollContainer" parent="MainPanel/ContentContainer/EntriesPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="EntriesList" type="VBoxContainer" parent="MainPanel/ContentContainer/EntriesPanel/VBoxContainer/EntriesContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="WinnersPanel" type="Panel" parent="MainPanel/ContentContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.35

[node name="VBoxContainer" type="VBoxContainer" parent="MainPanel/ContentContainer/WinnersPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="MainPanel/ContentContainer/WinnersPanel/VBoxContainer"]
layout_mode = 2
text = "获奖作品"
horizontal_alignment = 1

[node name="WinnersContainer" type="ScrollContainer" parent="MainPanel/ContentContainer/WinnersPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="WinnersList" type="VBoxContainer" parent="MainPanel/ContentContainer/WinnersPanel/VBoxContainer/WinnersContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DrawArea" type="Panel" parent="MainPanel"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2

[node name="CurrentWinner" type="Label" parent="MainPanel/DrawArea"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1
vertical_alignment = 1

[node name="ParticlesContainer" type="Control" parent="MainPanel/DrawArea"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ExportDialog" type="FileDialog" parent="."]
title = "导出中奖名单"
initial_position = 2
size = Vector2i(800, 500)
ok_button_text = "保存"
access = 2
root_subfolder = "godot_gamejam_raffle/exports"
filters = PackedStringArray("*.csv")

[connection signal="toggled" from="MainPanel/ControlPanel/DevlogFilter" to="." method="_on_devlog_filter_toggled"]
[connection signal="pressed" from="MainPanel/ControlPanel/DrawButton" to="." method="_on_draw_button_pressed"]
[connection signal="pressed" from="MainPanel/ControlPanel/ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="MainPanel/ControlPanel/ExportButton" to="." method="_on_export_button_pressed"]
[connection signal="confirmed" from="ExportDialog" to="." method="_on_export_dialog_confirmed"]
